Spacing issue at bottom fixed

--- a/src/components/navigation/pagination/Pagination.scss
+++ b/src/components/navigation/pagination/Pagination.scss
@@ -1,7 +1,6 @@
 @import "../../../stylesheets/Variables.scss";
 
 .pagination {
-    margin-bottom: 2rem;
     text-align: center;
 
     .current {
